--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.meutkarsh.hiddenword.INSTRUCTIONS">
+    tools:context="com.meutkarsh.hiddenword.INSTRUCTIONS"
+    android:background="@drawable/az">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,6 +22,7 @@
             android:layout_height="wrap_content"
             android:text="Instructions"
             android:id="@+id/textView"
-            android:textSize="19dp" />
+            android:textSize="19dp"
+            android:textStyle="bold" />
     </ScrollView>
 </RelativeLayout>
