--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,17 +15,27 @@
         android:layout_height="wrap_content"
         android:text="START"
         android:id="@+id/button_start"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="40dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/transparent"
+        android:textStyle="bold"
+        android:textSize="45dp"
+        android:textColor="#e6fa3296" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="INSTRUCTIONS"
         android:id="@+id/button_instructions"
+        android:layout_below="@+id/button_start"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp" />
+        android:layout_marginTop="25dp"
+        android:background="@android:color/transparent"
+        android:textColor="#fafa3296"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        android:singleLine="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -34,5 +44,10 @@
         android:id="@+id/button_exit"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="46dp" />
+        android:layout_marginBottom="10dp"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:textColor="#f0fa3296"
+        android:singleLine="true"
+        android:background="@android:color/transparent" />
 </RelativeLayout>
