--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -19,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/instructions"
-            android:textSize="23sp"
+            android:textSize="21sp"
+            android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
     </ScrollView>
 </RelativeLayout>
