--- a/app/src/main/res/layout/restart.xml
+++ b/app/src/main/res/layout/restart.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:hint="Enter new winning score : Default 300" />
+        android:hint="Update winning score ( optional )" />
 
 </LinearLayout>
