--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.meutkarsh.hiddenword.MainActivity"
-    android:background="@drawable/aa">
+    android:background="@drawable/bc"
+    >
 
     <Button
         android:id="@+id/button_start"
@@ -17,11 +18,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:background="@color/colorPrimary"
+        android:background="#00ffffff"
         android:maxLines="1"
         android:text="@string/start"
-        android:textColor="#e6fa3296"
-        android:textSize="30sp"
+        android:textColor="#000000"
+        android:textSize="40sp"
         android:textStyle="bold|italic" />
 
     <Button
@@ -31,11 +32,11 @@
         android:layout_below="@+id/button_start"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:background="@color/colorPrimary"
+        android:background="#00ffffff"
         android:maxLines="1"
         android:text="@string/instructions"
-        android:textColor="#fafa3296"
-        android:textSize="30sp"
+        android:textColor="#000000"
+        android:textSize="40sp"
         android:textStyle="bold|italic" />
 
     <Button
@@ -45,10 +46,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:background="@color/colorPrimary"
+        android:background="#00ffffff"
         android:maxLines="1"
         android:text="@string/exit"
-        android:textColor="#f0fa3296"
-        android:textSize="30sp"
+        android:textColor="#000000"
+        android:textSize="40sp"
         android:textStyle="bold|italic" />
 </RelativeLayout>
