--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -48,27 +48,6 @@
         android:layout_below="@+id/tv_player2"
         android:layout_alignParentEnd="true" />
 
-    <Button
-        android:id="@+id/button_restart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/tv_turn"
-        android:text="@string/restart"
-        android:textStyle="bold|italic" />
-
-    <Button
-        android:id="@+id/button_challenge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:longClickable="false"
-        android:text="@string/challenge"
-        android:textStyle="bold|italic" />
-
     <TextView
         android:id="@+id/tv_word"
         android:layout_width="wrap_content"
@@ -81,12 +60,11 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linear_layout_buttons"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_word"
-        android:layout_above="@+id/tv_turn">
+        android:layout_below="@+id/tv_word">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -460,6 +438,15 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button_restart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/restart"
+        android:layout_below="@+id/linear_layout_buttons"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold|italic" />
+
     <TextView
         android:id="@+id/tv_turn"
         android:layout_width="wrap_content"
@@ -467,8 +454,59 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="TURN"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignTop="@+id/button_challenge"
+        android:layout_below="@+id/linear_layout_buttons"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button_challenge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:longClickable="false"
+        android:layout_below="@+id/linear_layout_buttons"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/challenge"
+        android:textStyle="bold|italic" />
+
+    <LinearLayout
+        android:id="@+id/instructions_sound"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/button_restart">
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:background="@null"
+            android:id="@+id/inst"
+            android:text="INSTRUCTIONS"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:background="@null"
+            android:id="@+id/volume"
+            android:src="@drawable/ic_volume_up_black_24dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:id="@+id/prev"
+        android:layout_below="@+id/instructions_sound"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=""/>
+
+
 
 </RelativeLayout>
