--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style
         name="custom_actionbar_style"
         parent="@android:style/Theme.Holo.Light.DarkActionBar">
-     <item name="android:actionBarStyle">@style/custom_style</item>
+        <item name="android:actionBarStyle">@style/custom_style</item>
     </style>
 
     <style
@@ -26,6 +26,15 @@
         <item name="android:background">@drawable/az_new</item>
         <item name="android:headerDividersEnabled">true</item>
         <item name="android:typeface">normal</item>
+    </style>
+    <style name="AlertDialog">
+        <item name="android:background">@drawable/az_new</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
 </resources>
