--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.meutkarsh.hiddenword.Game"
-    android:background="@drawable/az">
+    android:background="@drawable/az_b">
 
     <TextView
         android:id="@+id/tv_player1"
@@ -475,22 +475,22 @@
         android:orientation="horizontal"
         android:layout_below="@+id/button_restart">
         <Button
+            android:id="@+id/inst"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:background="@null"
-            android:id="@+id/inst"
             android:text="INSTRUCTIONS"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
 
         <ImageButton
+            android:id="@+id/volume"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:background="@null"
-            android:id="@+id/volume"
             android:src="@drawable/ic_volume_up_black_24dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
@@ -505,6 +505,7 @@
         android:id="@+id/prev"
         android:layout_below="@+id/instructions_sound"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
         android:text=""/>
 
 
