Added new sound

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,8 @@
 
     <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
         <item name="android:background">@drawable/az_new</item>
-        <item name="android:headerDividersEnabled">true</item>
+      <!--  <item name="android:headerDividersEnabled">true</item>-->
+
         <item name="android:typeface">normal</item>
     </style>
 
